# gemini-business-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  findings.md  pyproject.toml  test-api.sh
.claude/: ralph-loop.local.md
app/: config.py  main.py
app/core/: account_pool.py  error_handlers.py  gemini_client.py  token_manager.py
app/models/: account.py
app/routes/: admin.py  chat.py  claude.py  gemini.py  openai.py  status.py
app/utils/: image_generation.py  multimodal.py  streaming.py
config/: accounts.json.example
docs/: 01-architecture-design.md  02-api-compatibility-layer.md  03-config-hot-reload.md  04-deployment-and-operations.md  05-testing-strategy.md  06-implementation-plan.md  07-account-lifecycle-management.md  API.md
docs/plans/: 2026-02-02-cookie-refresher-design.md  2026-02-02-cookie-refresher-implementation.md
static/: admin.html
static/js/: admin.js  api.js  charts.js  sse.js
tests/integration/: test_account_pool_integration.py
tests/unit/: test_account.py  test_account_pool.py  test_chat_routes.py  test_config.py  test_error_handlers.py  test_gemini_client.py  test_multimodal.py  test_status_routes.py  test_streaming.py  test_token_manager.py
tools/cookie-refresher/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
tools/cookie-refresher/cookie_refresher/: __init__.py  admin_client.py  cli.py  config.py  mail_2925.py  orchestrator.py  policy.py  refresh.py  scheduler.py  service.py
tools/cookie-refresher/cookie_refresher/engines/: base.py  drission.py  selenium_uc.py
tools/cookie-refresher/tests/: test_admin_client.py  test_admin_list_accounts.py  test_auth_cookies.py  test_cli.py  test_config.py  test_config_env.py  test_config_tokens.py  test_drission_engine.py  test_engine_detection.py  test_engine_error_handling.py  test_engine_payload.py  test_engine_signin_error.py  test_engine_verify_oob.py  test_extractors.py  test_login_flow_xsrf.py  test_login_flow_xsrf_drission.py  test_login_url_builder.py  test_login_url_builder_drission.py  test_mail_2925.py  test_mail_2925_imap.py  test_mail_timeout.py  test_orchestrated_refresh.py  test_orchestrator.py  test_policy.py  test_refresh.py  test_refresh_flow.py  test_scheduler.py  test_selenium_uc_engine.py
