[project]
name = "cookie-refresher"
version = "0.1.0"
description = "Gemini Business cookie refresher service"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "selenium>=4.15.0",
  "undetected-chromedriver>=3.5.5",
  "DrissionPage>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
